--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eject": "react-scripts eject",
     "serve": "serve -s build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
