--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://Dungha125.github.io/todolist_test",
+  "homepage": "https://github.com/Dungha125/svsv.git",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
